WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121222
[WinCairo] Compile errors, missing include.
https://bugs.webkit.org/show_bug.cgi?id=121222
Summary
[WinCairo] Compile errors, missing include.
peavo
Reported
2013-09-12 03:42:15 PDT
Compiling WinCairo, there's a couple of compile errors, because of a missing include.
>..\platform\win\DragImageCairoWin.cpp(116): error C2065: 'HWndDC' : undeclared identifier
>..\platform\graphics\win\GlyphPageTreeNodeCairoWin.cpp(45): error C2065: 'HWndDC' : undeclared identifier
Attachments
Patch
(1.58 KB, patch)
2013-09-12 03:50 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-09-12 03:50:21 PDT
Created
attachment 211417
[details]
Patch
Brent Fulgham
Comment 2
2013-09-12 08:47:25 PDT
Comment on
attachment 211417
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2013-09-12 08:51:13 PDT
Comment on
attachment 211417
[details]
Patch Clearing flags on attachment: 211417 Committed
r155616
: <
http://trac.webkit.org/changeset/155616
>
WebKit Commit Bot
Comment 4
2013-09-12 08:51:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug