[WinCairo] Compile errors, missing include. https://bugs.webkit.org/show_bug.cgi?id=121222

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-09-12
Reviewed by Brent Fulgham.

* platform/graphics/win/GlyphPageTreeNodeCairoWin.cpp: Include required header.
* platform/win/DragImageCairoWin.cpp: Include required header.

Canonical link: https://commits.webkit.org/139174@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155616 268f45cc-cd09-0410-ab3c-d52691b4dbfc